# ocl

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  API_README.md  Cargo.toml  DOCKER_README.md  Dockerfile  Dockerfile.render  RENDER_BUILD_GUIDE.md  RENDER_DEPLOYMENT.md  accounts.json  api-docs.html  build-render.sh  build.rs  build.sh  deploy.sh  docker-compose.yml  index.html  render.yaml  start.sh  transactions.json
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
src/: Merkle.rs  api.rs  main.rs  types.rs
src/lib/: build.rs
zklear-frontend/: README.md  package-lock.json  package.json
zklear-frontend/src/: App.css  App.tsx
zklear-frontend/src/components/: ApiSpec.tsx  Dashboard.tsx  Navigation.tsx
zklear-frontend/src/services/: api.ts
