[package]
name = "risc-zero-payment"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["methods"]

[workspace]
members = ["methods", "methods/guest"]

[dependencies]
risc0-zkvm = { version = "2.3", features = ["client"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
bincode = "1.3"
payment-methods = { path = "methods" }

[build-dependencies]
risc0-build = "2.3"

[[bin]]
name = "host"
path = "src/main.rs"