[package]
name = "payment-methods"
version = "0.1.0"
edition = "2021"

[lib]
name = "payment_methods"
path = "src/lib.rs"

[build-dependencies]
risc0-build = "1.2"

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }

[[bin]]
name = "payment_batch"
path = "src/bin/payment_batch.rs"
