[package]
name = "payment-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "2.3", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }

[[bin]]
name = "payment_batch"
path = "src/main.rs" 